--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
             clear:left;
             text-align:right;
             padding-right:10px;
+            align-content: center;
             margin-left: 550px;
             line-height: 25px;
         }
@@ -42,19 +43,29 @@
         <!-- Main Input For Receiving Query to our ML -->
         <form action="{{ url_for('predict')}}" method="post"  >
             <div class="data" >
-            
-            <div class="input">
+                
+                <div class="input">
             <label for="Gender">Gender:</label>
             <select name="Gender" >
                 <option value="1">Male</option>
                 <option value="0">Female</option>
             </select>
             
+            <label for="Age">Age:</label>
+            <input type="number" name="Age" placeholder="10-100" required="required"style="height:15px" min="10" max="100" />
+
             <label for="Current_smoker">Current_smoker:</label>
             <select name="Current_smoker" >
                 <option value="1">Yes</option>
                 <option value="0" selected>No</option>
             </select></div>
+            
+            <div class="input">
+            <label for="BPMeds">BPMeds:</label>
+            <select name="BPMeds" >
+                <option value="1">Yes</option>
+                <option value="0" selected>No</option>
+            </select>
 
             <div class="input">
             <label for="Prevalent_Stroke">Prevalent Stroke:</label>
@@ -68,13 +79,6 @@
                 <option value="1">Yes</option>
                 <option value="0" selected>No</option>
             </select></div>
-            
-            <div class="input">
-            <label for="BPMeds">BPMeds:</label>
-            <select name="BPMeds" >
-                <option value="1">Yes</option>
-                <option value="0" selected>No</option>
-            </select>
 
             <label for="Diabetes">Diabetes:</label>
             <select name="Diabetes" >
@@ -86,8 +90,6 @@
             <label for="Total_cholesterol">Total_cholesterol: </label>
             <input type="number" name="Total_cholesterol" placeholder="1-300" required="required" style="height:15px" min="1" max="300"/>
 
-            <label for="Age">Age:</label>
-            <input type="number" name="Age" placeholder="10-100" required="required"style="height:15px" min="10" max="100" />
             </div>
 
             <div class="input">
